--- a/language/i18n_sl.json
+++ b/language/i18n_sl.json
@@ -1773,7 +1773,7 @@
     "device_is_standby": "Naprava je izklopljena in je ni mogoče nadzorovati.",
     "favourite_program_name": "IME PRILJUBLJENEGA PROGRAMA",
     "please_select_delete_data": "Izberite podatke, ki jih želite izbrisati",
-    "your_laundry_is_done": "Sušenje je končano",
+    "your_laundry_is_done": "Vaše perilo je končano",
     "drying_in_x_has_ended": "Sušenje v ## se je končalo.",
     "please_close_door": "Prosimo, zaprite vrata",
     "room_temperature_linkage": "Povezava pri sobni temperaturi",
@@ -2231,37 +2231,37 @@
     "rf_eco_desc": "Vklopi in izklopi način varčevanja z energijo. Hladilnik preklopite na 43°F (6°C), zamrzovalnik pa na 1°F (-17°C).",
     "rf_super_cool_desc": "Hitro zniža temperaturo hladilnega prostora za hitrejše zamrzovanje svežih živil in stabilno ohranjanje zamrznjenih živil med veliko uporabo ali toplejšimi pogoji.",
     "rf_super_freeze_desc": "Hitro zniža temperaturo zamrzovalnika za hitrejše zamrzovanje sveže hrane in stabilno ohranjanje zamrznjene hrane med veliko uporabo ali v toplejših pogojih.",
-    "rf_ice_maker_desc": "Omogoča vklop/izklop ledomata v hladilniku.",
+    "rf_ice_maker_desc": "Omogoča vklop/izklop izdelovalnika ledu v hladilniku.",
     "diagnosing": "Diagnosticiranje ...",
     "new_device_found": "Najdena nova naprava",
     "new_device_found_tips": "Nova naprava je bila najdena, izberite \"NASTAVITE WI-FI\", da napravo povežete z omrežjem.",
     "set_wifi_uppercase": "NASTAVITE WI-FI",
     "full": "Poln",
-    "usage_frequency_metrics": "Meritve pogostosti uporabe",
+    "usage_frequency_metrics": "Metrike pogostosti uporabe",
     "super_cool_upper_camel_case": "Hitro hlajenje",
     "super_freeze_upper_camel_case": "Super zamrzovanje",
-    "input_password_cdc_tips": "Geslo mora biti dolgo od 8 do 20 znakov in mora biti sestavljeno iz vsaj 1 številke, 1 velike črke, 1 male črke in 1 posebnega znaka (#?!@$%^&*-).",
-    "self_pump_setup_1": "Izklopite črpalko kopice, dolgo pritisnite gumb za vklop/izklop in gumb za dol hkrati za 3 sekunde, nato bo lučka Wi-Fi utripala.",
-    "self_pump_setup_2": "Povežite se z Wi-Fi v skladu z nasveti, prikazanimi v aplikaciji. Ko je povezava uspešna, lučka Wi-Fi sveti.",
+    "input_password_cdc_tips": "Geslo mora biti dolgo od 8 do 20 znakov in sestavljeno iz vsaj 1 številke, 1 velike črke, 1 male črke in 1 posebnega znaka (#?!@$%^&*-).",
+    "self_pump_setup_1": "Izklopite črpalko, dolgo pritisnite gumb za vklop/izklop in gumb navzdol hkrati za 3 sekunde, nato bo lučka Wi-Fi utripala.",
+    "self_pump_setup_2": "Povežite se z omrežjem Wi-Fi v skladu z nasveti, prikazanimi v APP. Ko je povezava uspešna, se prižge lučka Wi-Fi.",
     "no_favor": "Brez priljubljenih",
     "unpair": "Prekliči seznanitev",
     "sync_to_auto": "Sinhronizacija z avtomatizacijo",
     "slide_tips": "Povlecite v levo, da izbrišete element",
     "no_data_tips": "Za dodajanje elementov kliknite »+« v zgornjem desnem kotu",
     "no_scheduling": "Brez razporejanja",
-    "offline_help_title": "Naprava je brez povezave, preverite!",
-    "offline_help_desc": "Priključen in vklopljen;\nWi-Fi je aktiviran in povezan;\nGeslo za Wi-Fi se ni spremenilo.",
+    "offline_help_title": "Naprava je izključena iz omrežja. Prosimo, preverite:",
+    "offline_help_desc": "1. Vključen je v električno omrežje in se vklaplja.\n2. Wi-Fi je aktiven in povezan.\n3. Geslo za Wi-Fi se pred kratkim ni spremenilo.",
     "dont_remind_again_uppercase": "NE OPOMNI VEČ",
     "storage_tips_title": "Nasveti za shranjevanje:",
-    "heat_pump_oem": "PRO series DHW",
+    "heat_pump_oem": "PRO serije DHW",
     "td22_drying_empty_water_tank": "Sušenje – Izpraznite rezervoar za vodo",
     "td22_drying_paused": "Sušenje začasno ustavljeno",
     "td22_drying_finished": "Sušenje končano",
     "td22_cooling_down": "Ohlajanje",
     "dry_finish_ele_tip": "Podatki bodo vključeni v statistiko eno uro kasneje.",
     "add_mobile_ac_1": "Daljinski upravljalnik usmerite proti sprejemniku in šestkrat @pritisnite gumb \"SWING\".# Po vsakem pritisku bi morali zaslišati pisk. Prepričajte se, da je daljinski upravljalnik usmerjen neposredno v sprejemnik.",
-    "add_mobile_ac_2": "Prepričajte se, da se na zaslonu @naprave prikaže \"77\".# To pomeni, da je enota zdaj v načinu povezovanja Wi-Fi. Če zaslon ne prikaže \"77\", ponovite 2. korak.",
-    "add_dehumidifier_ac_2": "stočasno pritisnite in držite gumba @\"Mode\" in \"Fan\".# Naprava bi morala trikrat zapiskati. Če ne slišite treh piskov, poskusite znova pritisniti in držati gumbe.",
+    "add_mobile_ac_2": "Potrdite, da se na zaslonu @naprave prikaže \"77\".# To pomeni, da je enota zdaj v načinu seznanjanja Wi-Fi. Če se na zaslonu ne prikaže \"77\", ponovite korak 2.",
+    "add_dehumidifier_ac_2": "Istočasno pritisnite in držite gumba @\"Mode\" in \"Fan\".# Naprava bi morala trikrat zapiskati. Če ne slišite treh piskov, poskusite znova držati gumbe.",
     "add_dehumidifier_ac_3": "Prepričajte se, da se na zaslonu @naprave prikaže \"P2\".# To pomeni, da je enota zdaj v načinu združevanja Wi-Fi. Če zaslon ne prikazuje \"P2\", ponovite 2. korak.",
     "wm22_add_clothes_and_continue": "Dodajte oblačila in nadaljujte",
     "wm22_doseaid_waiting": "DoseAid čaka",
@@ -2273,9 +2273,9 @@
     "bluetooth_connection_failed": "Bluetooth povezava ni uspela. Preverite stanje naprave.",
     "wm22_autodose": "Avtodoziranje",
     "wm22_load_efficiency": "Učinkovitost obremenitve",
-    "wm22_load_efficiency_tips": "Izogibajte se preobremenitvi pralnega stroja za učinkovitejše čiščenje.",
+    "wm22_load_efficiency_tips": "Za učinkovitejše čiščenje se izogibajte preobremenitvi pralnega stroja.",
     "wm22_detergent_softener_consumption": "Poraba detergenta in mehčalca",
-    "wm22_detergent_softener_consumption_tips": "Zaradi učinkovitosti polnjenja in stopnje umazanosti perila je pralni stroj porabil manj detergenta in mehčalca, kot je bilo predvideno.",
+    "wm22_detergent_softener_consumption_tips": "Zaradi učinkovitosti polnjenja in stopnje umazanosti oblačil je pralni stroj porabil manj pralnega sredstva in mehčalca tkanin, kot je bilo predvideno.",
     "wm22_eco_tips": "Eko nasveti",
     "wm22_load_efficiency_heavity_tips": "Pralni stroj je podaljšal program, ker je bilo perilo pretežko. Izogibajte se preobremenitvi pralnega stroja za učinkovitejše čiščenje.",
     "wm22_detergent_softener_consumption_heavity_tips": "Zaradi učinkovitosti polnjenja in stopnje umazanosti oblačil je pralni stroj porabil več detergenta in mehčalca, kot je bilo pričakovano.",
@@ -2286,25 +2286,25 @@
     "wifi_auto_updates_desc": "Če omogočite to nastavitev, bo naprava samodejno posodobila vdelano programsko opremo Wi-Fi, ne da bi bila potrebna potrditev.",
     "device_fw": "Naprava FW",
     "wifi_fw": "Wi-Fi FW",
-    "up_to_date": "Ažurno",
+    "up_to_date": "Na tekočem",
     "downloading": "Prenašanje ...",
     "firmware_update_notice": "Postopek posodobitve vdelane programske opreme bo onemogočil uporabo naprave za čas trajanja posodobitve. Med postopkom lahko vmesnik naprave utripa.",
     "firmware_cannot_update_notice": "Preklopite napravo v stanje pripravljenosti, da začnete posodobitev. Naprave ne boste mogli uporabljati v času posodobitve vdelane programske opreme. Med postopkom lahko vmesnik naprave utripa.",
-    "ac_old": "črni bezeg",
+    "ac_old": "Za stare",
     "ac_young": "Za mlade",
     "ac_kid": "Za otroka",
     "fridge_temp_sens_head_failure": "xxxxx senzor temperature",
-    "set_room_name_notice": "Nastavite ime sobe.",
-    "ac_clothes_dry": "Suha oblačila",
+    "set_room_name_notice": "Prosimo, nastavite ime sobe.",
+    "ac_clothes_dry": "Sušenje oblačil",
     "ac_Pur": "Čiščenje zraka",
     "ac_8heat": "8° Toplote",
     "wm_dose_amount_capitalize": "Količina odmerka: XX",
-    "wm_dose_level_capitalize": "Raven odmerka: XX",
+    "wm_dose_level_capitalize": "Velikost odmerka: XX",
     "ac_pump_switch": "Črpalka",
     "cooling_01_desc": "Modul Wi-Fi je vklopljen, vendar ni komunikacije z glavno ploščo.",
-    "cooling_02_desc": "Modul Wi-Fi je vklopljen, komunikacija z glavno ploščo pa je aktivna. Modul še ni povezan z usmerjevalnikom Wi-Fi.",
-    "cooling_03_desc": "Povezan z usmerjevalnikom Wi-Fi. Še ni povezan z oblakom.",
-    "cooling_04_desc": "Povezan z Wi-Fi in oblakom. Napravo lahko povežete v par. Daljinski upravljalnik ni aktiviran.",
+    "cooling_02_desc": "Modul Wi-Fi je vklopljen in komunikacija z glavno ploščo je aktivna. Modul še ni povezan z usmerjevalnikom Wi-Fi.",
+    "cooling_03_desc": "Povezanost z omrežjem Wi-Fi. Ne z oblakom.",
+    "cooling_04_desc": "Povezan z omrežjem Wi-Fi in oblakom. Napravo lahko seznanite. Daljinski upravljalnik ni aktiviran.",
     "cooling_05_desc": "Povezan z Wi-Fi in oblakom. Daljinski upravljalnik je aktiviran.",
     "status_symbols": "Simboli stanja:",
     "devices_in_your_network": "Naprave v vaši bližini",
@@ -2315,11 +2315,11 @@
     "recommendation": "Priporočilo:",
     "useage_prequency_metrics": "Meritve pogostosti uporabe",
     "number_of_door_openings": "Število vratnih odprtin",
-    "russia_cfm_title": "Ali ste ruski državljan?",
+    "russia_cfm_title": "Ste ruski državljan?",
     "russia_cfm_content": "Zaradi ruske zakonodaje morajo ruski državljani izbrati Rusijo kot državo za izpolnjevanje ruskih zahtev glede lokalizacije osebnih podatkov.",
     "last_cycle": "Zadnji cikel",
     "td22_b2_plus_pair_step1_desc": "Vklopite sušilni stroj.\nTapnite in držite tipki \"Čas\" in \"Zakasnitev konca\", dokler se na zaslonu ne prikaže \"PAr\".\nOmrežje naprave je odprto za povezavo 3 minute.\nKliknite NAPREJ za nadaljevanje.",
-    "td22_b2_plus_connect_step1_desc": "Vklopite sušilni stroj. \nTapnite in držite tipki \"Čas\" in \"Zakasnitev konca\", dokler se na zaslonu ne prikažeta \"Con\" in simbol Wi-Fi. \nOmrežje naprave je odprto za povezavo 5 minut. \nKliknite NAPREJ za nadaljevanje.",
+    "td22_b2_plus_connect_step1_desc": "Vklopite sušilni stroj. \nTapnite in držite tipki \"Time\" in \"Delay end\", dokler se na zaslonu ne prikažeta \"Con\" in simbol Wi-Fi. \nOmrežje naprave je odprto za povezavo za 5 minut. \nČe želite nadaljevati, kliknite NEXT.",
     "drying_atag_delay_start_in": "Sušenje je odloženo. Začetek v",
     "wm22_b2_plus_connect_step1_desc": "Vklopite pralni stroj. \nTapnite in držite tipki \"Fast\" in \"Delay end\", dokler se na zaslonu ne prikažeta \"Con\" in simbol Wi-Fi. \nOmrežje naprave je odprto za povezavo 5 minut. \nKliknite NAPREJ za nadaljevanje.",
     "wm22_b2_plus_pair_step1_desc": "Vklopite pralni stroj. \nTapnite in držite tipki \"Fast\" in \"Delay end\", dokler se na zaslonu ne prikaže \"PAr\". Omrežje naprave je odprto za povezavo 3 minute. \nKliknite NAPREJ za nadaljevanje.",
@@ -2336,10 +2336,10 @@
     "add_your_device_tips": "Skenirajte kodo naprave in povežite svojo napravo v le nekaj korakih.",
     "discover_tips": "Nadzirajte in spremljajte svoje naprave od koder koli in kadarkoli.",
     "you_are_not_signed_in": "Niste prijavljeni",
-    "energy_saving": "Varčuj  z energ.",
+    "energy_saving": "Varčevanje z energijo",
     "how_to_use": "Kako uporabiti",
     "app_preferences": "Nastavitve aplikacije",
-    "washing_is_stopping_tips": "Pranje v {####} je v fazi zaustavitve. \nKo je trenutni program ustavljen, lahko v pralni stroj pošljete drug program.",
+    "washing_is_stopping_tips": "Pranje v {####} je v fazi ustavljanja. \nKo je trenutni program ustavljen, lahko v pralni stroj pošljete drug program.",
     "washing_is_stopping": "Pranje se zaustavlja.",
     "local_network_permission_tips": "Odprite dovoljenja lokalnega omrežja.\n Nastavitev->Zasebnost->Lokalno omrežje",
     "time_and_date_uppercase": "ČAS IN DATUM",
@@ -3374,7 +3374,7 @@
     "automation_condition_des_is_key": "ko ## je @@ **",
     "centigrade_key": "##℃",
     "fahrenheit_key": "##°F",
-    "enter_city_key": "Vnesite mesto…",
+    "enter_city_key": "Išči mesto",
     "add_key": "Dodaj",
     "select_logic_relation_ship": "Izberite logično razmerje",
     "no_scene_key": "brez prizora",
@@ -4003,5 +4003,16 @@
     "CL_DV_OV_check_to_confirm": "Za potrditev preverite pečico.",
     "CL_CF_CO_buy": "Kupiti",
     "CL_CF_CS_window_ac_step_2": "Pritisnite in približno 6 sekund držite gumb \"connect\" ali usmerite daljinski upravljalnik v sprejemnik in 6-krat pritisnite gumb \"swing\", dokler se na zaslonu ne prikaže \"77\" ali začne utripati lučka WiFi.",
-    "CL_DV_OV_default_cooking_intensity": "PRIVZETA INTENZIVNOST KUHANJA"
+    "CL_DV_OV_default_cooking_intensity": "PRIVZETA INTENZIVNOST KUHANJA",
+    "CL_DV_HOB_residual_heat_title_pop": "Preostala toplota",
+    "CL_DV_HOB_residual_heat_content_pop": "Kuhalno polje je še vroče. Pazite, da se ne dotaknete vročega kuhališča in da nanj ne položite predmetov, občutljivih na vročino.",
+    "CL_DV_HOB_hood_mode_setting": "Nastavitve načina nape",
+    "CL_DV_HOB_refresh_mode_setting": "Nastavitve načina osveževanja",
+    "CL_DV_HOB_grease_filter_profile": "Možnosti profila maščobnega filtra",
+    "CL_DV_HOB_hood_mode_setting_content": "Nastavite način nape. Ko je napa v samodejnem načinu, se zažene takoj, ko se začne postopek kuhanja.",
+    "CL_DV_HOB_hood_mode_setting_hint": "Če je samodejni način izklopljen, bo način ročni.",
+    "CL_DV_HOB_automatic_mode": "Samodejni način",
+    "CL_DV_HOB_refresh_setting_hint": "Če je način osveževanja vklopljen, bo naprava samodejno začela uporabljati način osveževanja, ko je napa aktivna.",
+    "CL_DV_HOB_grease_filter_profile_content": "Nastavite dolgo življenjsko dobo maščobnega filtra. \n\n P1 se uporablja predvsem za vrenje in rahlo cvrtje. P2 se uporablja za uravnoteženo vrenje in srednje cvrtje. P3 se uporablja za močno cvrtje.",
+    "CL_DV_HOB_hood_mode_manual": "Priročnik"
 }
