--- a/language/i18n_sr_BA.json
+++ b/language/i18n_sr_BA.json
@@ -2916,105 +2916,105 @@
     "link_google_ability_title": "Ako povežete, Google može:\n​",
     "link_google_ability_1": "Pristupite listi svojih povezanih uređaja.\n​",
     "link_google_ability_2": "Identifikacija pristupa uređajima (ovo uključuje naziv i njegovu jedinstvenu identifikaciju).\n​",
-    "link_google_ability_3": "Pristupite trenutnom stanju i podešavanjima uređaja.\n​",
-    "review_google_xxx": "Pregledajte Google-ov ***.\n​",
+    "link_google_ability_3": "Pristupite trenutnom stanju i podešavanjima uređaja.",
+    "review_google_xxx": "Google-овe рецензије***.",
     "air_care_general_des": "Аутоматска оптимизација за удобно окружење",
     "air_care_pet_des": "Аутоматска оптимизација за окружење погодно за кућне љубимце",
     "air_care_child_des": "Аутоматска оптимизација за окружење прилагођено деци",
     "air_care_yoga_des": "Аутоматска оптимизација за топло окружење погодно за јогу",
-    "air_care_elder_des": "Аутоматска оптимизација за окружење погодно за старије",
+    "air_care_elder_des": "Аутоматска оптимизација за окружење прилагођено старијима",
     "air_care_tips_title": "ДА ЛИ СИ ЗНАО?",
-    "air_care_tips_content_1": "Када стање собе није добро, кликните на \"почетак\" да бисте оптимизовали стање собе на \"добро\".",
-    "air_care_tips_content_2": "Кликом на 3Д собу можете променити картице собе.",
+    "air_care_tips_content_1": "Када статус собе није задовољавајући, кликните на \"почни\" да бисте оптимизовали статус собе на \"добар\".",
+    "air_care_tips_content_2": "Кликом на 3D собу можете променити картице соба.",
     "air_care_tips_content_3": "Унесите подешавања за оптимизацију параметара.",
-    "error_sycronizing_your_device": "Greška pri sinhronizaciji vašeg uređaja.",
+    "error_sycronizing_your_device": "Грешка при синхронизацији вашег уређаја.",
     "error_cause_missing_data": "Дошло је до грешке на уређају. Ово може узроковати да подаци недостају.",
-    "water_drain": "Вода одвод",
-    "tank": "Танк",
-    "smart_tv": "Смарт ТВ",
-    "add_tv_step_1": "Укључите ТВ и проверите да ли је ваш телефон на истој ЛАН мрежи као и ТВ.",
-    "searching_for_device": "Pretraga Uređaja…",
-    "searching_for_device_tips": "Сачекајте да се 4-цифрени код пара појави на ТВ екрану.",
-    "enter_pair_code": "Унесите код за пар",
-    "enter_pair_code_desc": "Унесите код за пар који се приказује на ТВ екрану.",
-    "vol": "ВОЛ",
-    "channel_abbreviation": "ЦХ",
-    "apps": "АППС",
-    "searching": "У потрази...",
+    "water_drain": "Одвод воде",
+    "tank": "Резервоар",
+    "smart_tv": "Паметни ТВ",
+    "add_tv_step_1": "Укључите ТВ и проверите да ли је ваш телефон на истој LAN мрежи као и ТВ.",
+    "searching_for_device": "Тражење уређаја...",
+    "searching_for_device_tips": "Сачекајте да се 4-цифрени за упаривање појави на ТВ екрану.",
+    "enter_pair_code": "Унесите код за упаривање",
+    "enter_pair_code_desc": "Унесите код за упаривање који се приказује на ТВ екрану.",
+    "vol": "VOL",
+    "channel_abbreviation": "CH",
+    "apps": "APPS",
+    "searching": "Претраживање...",
     "select_signal_source": "Изаберите извор сигнала",
-    "try_to_search_for_something": "Покушајте да тражите нешто",
+    "try_to_search_for_something": "Покушајте да претражите нешто",
     "im_listening": "Слушам...",
     "long_press_to_speak": "Дуго притисните да бисте говорили",
     "tv_pin_incorrect_tips": "Жао нам је, код који сте унели је погрешан. Молимо проверите и унесите поново!",
     "select_smart_tv": "Изаберите паметни ТВ",
     "auto_dose_quantity": "Аутоматска количина дозе",
-    "ask_microphone_permissions": "Отворите дозволе за микрофон.\n Подешавање- > Приватност- > Микрофон- > ЦоннецтЛифе",
+    "ask_microphone_permissions": "Отворите дозволе за микрофон.\n Подешавање- > Приватност- > Микрофон- > ConnectLife",
     "autodose_tips": "Аутоматски дозира праву количину детерџента за сваки циклус прања.",
     "open_door_tips": "Отворите врата даљински кликом на ово дугме",
     "child_lock_tips": "Закључајте контролну таблу укључујући функцију дозатора.",
-    "add_favourite": "Додај У Омиљене",
-    "select_program": "Изаберите Програм",
-    "ad_tv_sub_title": "Pratite ove korake da povežete uređaj na WiFi.",
-    "upper_wash": "Уппер Васх",
-    "lower_wash": "Ловер Васх",
-    "all_zone": "Алл Зоне",
+    "add_favourite": "Додај у омиљене",
+    "select_program": "Изаберите програм",
+    "ad_tv_sub_title": "Пратите корак да бисте повезали уређај на Wi-Fi.",
+    "upper_wash": "Прање у горњем делу",
+    "lower_wash": "Прање у доњем делу",
+    "all_zone": "Све зоне",
     "zone_wash": "Зонско прање",
-    "air_care_optimize": "Оптимизира",
+    "air_care_optimize": "Оптимизираj",
     "good": "Добро",
     "air_care_optimize_title": "План оптимизације",
-    "step_wash_dishes": "Корак по корак оперите судове",
+    "step_wash_dishes": "Корак по корак: Прање судова",
     "cdc_account_locked": "Nalog je zaključan.\\Previše neuspešnih pokušaja prijavljivanja.\\Probajte da resetujete lozinku.\n​",
-    "wrong_and_try_again": "Nešto nije u redu. Molim vas, pokušajte ponovo.",
-    "connect_devices": "Povežite\nsvoje uređaje && i doživite novi način pametnog života.",
-    "link_xxx": "Link ***",
-    "no_device_searched": "Nije pretražen nijedan uređaj",
-    "confirm_tv_network_connected": "Potvrdite da su vaš telefon i TV povezani na isti VIFI.",
-    "up_to_x_at_most": "Najviše do ***!",
-    "look_for_devices_near_you": "Potražite uređaje u vašoj blizini",
+    "wrong_and_try_again": "Нешто није у реду, покушајте поново.",
+    "connect_devices": "Повежите\nсвоје уређаје и упознајте нови начин паметног живота.",
+    "link_xxx": "Линк ***",
+    "no_device_searched": "Није претражен ниједан уређај",
+    "confirm_tv_network_connected": "Потврдите да су ваш телефон и ТВ повезани на исти WIFI.",
+    "up_to_x_at_most": "Највише до ***!",
+    "look_for_devices_near_you": "Потражите уређаје у вашој близини",
     "room_manage_room_list_key": "Листа соба",
-    "room_manage_3d_rooms_key": "3Д собе",
-    "room_type_living_room": "дневна соба",
+    "room_manage_3d_rooms_key": "3D собе",
+    "room_type_living_room": "Дневна соба",
     "room_type_bed_room": "Спаваћа соба",
     "room_type_wine_cellar_room": "Вински подрум",
     "room_type_kitchen_room": "Кухиња",
     "room_type_dinning_room": "Трпезарија",
     "room_type_bath_room": "Купатило",
-    "room_type_laundry_room": "Praonica",
+    "room_type_laundry_room": "Вешерај",
     "room_type_balcony_room": "Балкон",
-    "room_type_kid's_room": "Соба за дјецу",
-    "room_type_custom_room": "Обичај",
+    "room_type_kid's_room": "Соба за децу",
+    "room_type_custom_room": "Прилагођено",
     "room_type_unassigned_room": "Недодељено",
     "room_manage_device_key": "уређај",
-    "room_manage_devices_key": "уређаја",
+    "room_manage_devices_key": "уређаји",
     "add_rooms_for_floor": "Додајте собе за овај спрат",
     "add_floor_key": "додати спрат",
-    "edit_3d_room_key": "уреди 3д собу",
+    "edit_3d_room_key": "уреди 3D собу",
     "select_devices_to_add": "Изаберите уређаје за додавање",
     "select_devices_you_want_to_add": "Изаберите уређаје које желите да додате у „##“",
     "unassigned_devices": "Недодељени уређаји",
     "devices_in_other_rooms": "Уређаји у другим просторијама",
     "add_to_this_room": "додати у собу",
     "select_room_for_more_detail": "Изаберите собу за више детаља",
-    "add_3d_rooms_key": "Додајте 3Д собе",
+    "add_3d_rooms_key": "Додајте 3D собе",
     "select_room_to_edit": "Изаберите собу за уређивање",
-    "drag_rooms_to_the_building_area": "Превуците и испустите собе у подручје зграде",
-    "add_floor": "Додати спрат?",
+    "drag_rooms_to_the_building_area": "Превуците и спустите просторије у простор за изградњу.",
+    "add_floor": "Додај спрат?",
     "add_floor_tip_key": "Актуелни уређаји биће постављени на 1. спрату. Можете их преместити касније.",
     "select_rooms_in_your_home_key": "Изаберите собе у свом дому",
     "how_many_rooms_in_this_floor_key": "Колико соба у вашој кући?",
-    "drag_and_drop_rooms": "Превуците и испустите собе...",
+    "drag_and_drop_rooms": "Превуците и спустите собе...",
     "manage_3d_room_tip": "Притисните и превуците собе на праву позицију",
     "room_type_key": "врста собе",
-    "select_room_type_for_existing_rooms": "Изаберите тип собе за постојеће собе",
-    "edit_device_key": "уређивати уређај",
-    "change_room_key": "свлачионица",
+    "select_room_type_for_existing_rooms": "Изаберите тип собе за постојеће просторије",
+    "edit_device_key": "уреди уређај",
+    "change_room_key": "промените собу",
     "select_a_room": "изаберите собу",
     "delete_room_key": "Избрисати собу?",
     "room_number_limit": "На један спрат се може додати само 9 соба.",
-    "delete_room_tip": "Брисањем ове собе биће уклоњена и одговарајућа 3Д СОБА. Уређаји повезани са овом просторијом биће премештени у категорију „Недодељени“ на страници уређаја.",
+    "delete_room_tip": "Брисање ове просторије такође ће уклонити њену одговарајућу 3D просторију. Уређаји повезани са овом просторијом биће премештени у категорију „Неодређено“ на страници уређаја.",
     "remove_device_tip": "Уклањањем уређаја из ове собе, биће премештен у категорију „Непријављени“ на страници уређаја.",
-    "create_3d_rooms": "креирајте 3Д собе",
-    "3d_rooms_introduction": "Са увођењем 3Д соба у овој верзији, сада можете лако да проверите статус ваздуха у свакој соби на први поглед.",
+    "create_3d_rooms": "креирајте 3D собе",
+    "3d_rooms_introduction": "Са увођењем 3D просторија у овој верзији, сада можете лако проверити стање ваздуха у свакој просторији једним погледом.",
     "select_floor": "изаберите спрат",
     "add_new_room": "додајте нову собу",
     "click_to_add_device": "Кликните на дугме ## на дну да бисте додали уређаје.",
@@ -3374,7 +3374,7 @@
     "automation_condition_des_is_key": "Када ## је @@ **",
     "centigrade_key": "##℃",
     "fahrenheit_key": "##°F",
-    "enter_city_key": "Унесите град…",
+    "enter_city_key": "Претражите град",
     "add_key": "Додај",
     "select_logic_relation_ship": "Изаберите логички однос",
     "no_scene_key": "нема сцене",
@@ -4003,5 +4003,16 @@
     "CL_DV_OV_check_to_confirm": "Проверите рерну да бисте потврдили.",
     "CL_CF_CO_buy": "Купи",
     "CL_CF_CS_window_ac_step_2": "Притисните и држите дугме „повежи“ отприлике 6 секунди, или усмерите даљински управљач ка пријемнику и притисните дугме „замахни“ 6 пута, док на дисплеју не буде приказано „77“ или ВиФи лампица не почне да трепери.",
-    "CL_DV_OV_default_cooking_intensity": "ПОДРАЗОВАНИ ИНТЕНЗИТЕТ КУВАЊА"
+    "CL_DV_OV_default_cooking_intensity": "ПОДРАЗОВАНИ ИНТЕНЗИТЕТ КУВАЊА",
+    "CL_DV_HOB_residual_heat_title_pop": "Преостала топлота",
+    "CL_DV_HOB_residual_heat_content_pop": "Зона за кување је још врућа. Пазите да не додирнете врућу зону за кување или да на њу ставите предмете осетљиве на топлоту.",
+    "CL_DV_HOB_hood_mode_setting": "Подешавања режима хаубе",
+    "CL_DV_HOB_refresh_mode_setting": "Подешавања режима освежавања",
+    "CL_DV_HOB_grease_filter_profile": "Опције профила филтера за масноћу",
+    "CL_DV_HOB_hood_mode_setting_content": "Подесите режим хаубе. Када је напа у аутоматском режиму, она ће почети чим процес кувања почне.",
+    "CL_DV_HOB_hood_mode_setting_hint": "Ако је аутоматски режим искључен, режим ће бити ручни.",
+    "CL_DV_HOB_automatic_mode": "Аутоматски режим",
+    "CL_DV_HOB_refresh_setting_hint": "Ако је режим освежавања укључен, уређај ће аутоматски почети да користи режим освежавања када је напа активна.",
+    "CL_DV_HOB_grease_filter_profile_content": "Подесите дуговечност филтера за масноћу. \n\n П1 се користи углавном за кување и лагано пржење. П2 се користи за уравнотежено кључање и просечно пржење. П3 се користи за тешко пржење.",
+    "CL_DV_HOB_hood_mode_manual": "Мануал"
 }
