--- a/language/i18n_pt.json
+++ b/language/i18n_pt.json
@@ -3374,7 +3374,7 @@
     "automation_condition_des_is_key": "quando ## é @@ **",
     "centigrade_key": "##℃",
     "fahrenheit_key": "##°F",
-    "enter_city_key": "Insira a cidade…",
+    "enter_city_key": "Procure a cidade",
     "add_key": "Adicionar",
     "select_logic_relation_ship": "Selecione a relação lógica",
     "no_scene_key": "sem cena",
@@ -4003,5 +4003,16 @@
     "CL_DV_OV_check_to_confirm": "Verifique o forno para confirmar.",
     "CL_CF_CO_buy": "Comprar",
     "CL_CF_CS_window_ac_step_2": "Pressione e segure o botão “conectar” por aproximadamente 6 segundos, ou aponte o controle remoto para o receptor e pressione o botão “oscilar” 6 vezes, até que o visor mostre “77” ou a luz WiFi comece a piscar.",
-    "CL_DV_OV_default_cooking_intensity": "INTENSIDADE DE COZIMENTO PADRÃO"
+    "CL_DV_OV_default_cooking_intensity": "INTENSIDADE DE COZIMENTO PADRÃO",
+    "CL_DV_HOB_residual_heat_title_pop": "Calor residual",
+    "CL_DV_HOB_residual_heat_content_pop": "A zona de cozimento ainda está quente. Tenha cuidado para não tocar na zona de cozimento quente ou colocar itens sensíveis ao calor sobre ela.",
+    "CL_DV_HOB_hood_mode_setting": "Configurações do modo Hood",
+    "CL_DV_HOB_refresh_mode_setting": "Configurações do modo de atualização",
+    "CL_DV_HOB_grease_filter_profile": "Opções de perfil de filtro de gordura",
+    "CL_DV_HOB_hood_mode_setting_content": "Defina o modo do exaustor. Quando o exaustor estiver no modo automático, ele iniciará assim que o processo de cozimento começar.",
+    "CL_DV_HOB_hood_mode_setting_hint": "Se o modo automático estiver desativado, o modo será manual.",
+    "CL_DV_HOB_automatic_mode": "Modo automático",
+    "CL_DV_HOB_refresh_setting_hint": "Se o modo de atualização estiver ativado, o aparelho começará a usar automaticamente o modo de atualização quando o exaustor estiver ativo.",
+    "CL_DV_HOB_grease_filter_profile_content": "Defina a longevidade do filtro de gordura. \n\n P1 é usado principalmente para ferver e fritar levemente. P2 é usado para ferver equilibrado e fritar médio. P3 é usado para fritar pesado.",
+    "CL_DV_HOB_hood_mode_manual": "Manual"
 }
