--- a/language/i18n_zh_TW.json
+++ b/language/i18n_zh_TW.json
@@ -3374,7 +3374,7 @@
     "automation_condition_des_is_key": "當 ## 是 @@ **",
     "centigrade_key": "##℃",
     "fahrenheit_key": "##°F",
-    "enter_city_key": "輸入城市…",
+    "enter_city_key": "搜索城市",
     "add_key": "添加",
     "select_logic_relation_ship": "選擇邏輯關係",
     "no_scene_key": "無場景",
@@ -4003,5 +4003,16 @@
     "CL_DV_OV_check_to_confirm": "檢查烤箱以確認。",
     "CL_CF_CO_buy": "買",
     "CL_CF_CS_window_ac_step_2": "按住「連線」按鈕約6秒，或將遙控器對準接收器並按下「搖擺」按鈕6次，直到顯示幕顯示「77」或WiFi指示燈開始閃爍。",
-    "CL_DV_OV_default_cooking_intensity": "預設烹飪強度"
+    "CL_DV_OV_default_cooking_intensity": "預設烹飪強度",
+    "CL_DV_HOB_residual_heat_title_pop": "餘熱",
+    "CL_DV_HOB_residual_heat_content_pop": "烹飪區仍然很熱。小心不要觸摸熱烹飪區或在其上放置任何熱敏物品。",
+    "CL_DV_HOB_hood_mode_setting": "引擎蓋模式設定",
+    "CL_DV_HOB_refresh_mode_setting": "刷新模式設定",
+    "CL_DV_HOB_grease_filter_profile": "油脂過濾器配置選項",
+    "CL_DV_HOB_hood_mode_setting_content": "設定引擎蓋的模式。當抽油煙機處於自動模式時，烹調過程一開始，抽油煙機就會啟動。",
+    "CL_DV_HOB_hood_mode_setting_hint": "如果自動模式關閉，則模式將為手動。",
+    "CL_DV_HOB_automatic_mode": "自動模式",
+    "CL_DV_HOB_refresh_setting_hint": "如果刷新模式已開啟，則當抽油煙機處於活動狀態時，裝置將自動開始使用刷新模式。",
+    "CL_DV_HOB_grease_filter_profile_content": "設定油脂過濾器的壽命。 \n\n P1主要用於煮和輕煎。 P2用於平衡煮和平均煎。 P3用於重型油炸。",
+    "CL_DV_HOB_hood_mode_manual": "手動的"
 }
